--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@headlessui/react": "^1.7.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
